# OTUS_RAG_RAGAS_TEST

./: .gitignore  README.md  check_services.py  convert_data_for_chanck.py  pyproject.toml  rag_qdrant_ragas.py  ragas_fun.py  test_rag_chain_evaluation.py
data/: about_parametrs_ragas  Шаблоны_ответов_ для_ИИ.TXT
